# synarius-core

./: .gitignore  CODEOWNERS  CODE_REVIEW_PROTOKOLL.md  CONTRIBUTING.md  DISCLAIMER.txt  MANIFEST.in  README.md  SECURITY.md  main.py  pyproject.toml  setup.py  synarius-core-cli-v2.spec  synarius-core-cli.spec
.github/workflows/: ci.yml  cla.yml  docs.yml
Plugins/FmuRuntime/: fmu_runtime.py
docs/: conf.py  index.rst
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  schema_violations.json  search.html  searchindex.js
docs/concepts/: data_model_uml.puml  data_model_uml.rst
docs/developer/: attribute_dict_contributor_notes.rst  code_coverage_overview.rst  index.rst  programming_guidelines.rst
docs/requirements/: architecture.rst  index.rst  system.rst
docs/requirements/components/: compiler.rst  controller.rst  data_model.rst  data_model_uml.puml  data_model_uml_supplement.rst  index.rst  io.rst  model.rst  overview.rst  simulation.rst
docs/specifications/: attribute_config_concept.rst  attribute_dict.rst  attribute_path_semantics.rst  compiler_lowering_rules.rst  controller_command_protocol.rst  core_type_system.rst  fmu_library_plugin_api_v0_3_draft.rst  fmu_library_plugin_concept_v0_2.rst  fmu_library_plugin_concept_v0_2_1.rst  fmu_library_plugin_concept_v0_2_2.rst  fmu_library_plugin_concept_v0_2_3.rst  fmu_library_plugin_concept_v0_2_4.rst  fmu_library_plugin_concept_v0_2_5.rst  fmu_library_plugin_concept_v0_2_6.rst  fmu_library_plugin_concept_v0_2_7.rst  fmu_library_plugin_concept_v0_2_8.rst  fmu_library_plugin_concept_v0_2_9.rst  index.rst  kennlinien_kennfelder_concept.rst  library_catalog.rst  parameters_data_model_dcm2_cdfx_v0_5.rst  parameters_duckdb_sot_provisional.rst  pin_model.rst  plugin_api.rst  plugin_concept_v0_3.rst  plugin_concept_v0_3_plugin_api.rst  plugin_concept_v0_3_technical.rst  spdm_v0_1.rst
docs/specifications/attribute_config/: architecture.rst  concept.rst  implementation_plan.rst  index.rst
docs/specifications/fmf_fmfl/: architecture_and_pipeline_v0_2.rst  changelog_v0_2.rst  codegen_stage2_concept.rst  deliverables_examples.rst  execution_semantics_v0_2.rst  fmf_v0_1.rst  fmfl_v0_1.rst  index.rst  normative_summaries_v0_1.rst  normative_summaries_v0_2.rst
scripts/: generate_dcm2_maximal_stress.py  generate_maximal_mixed_variants.py  generate_mdf.py  generate_operator_library_svgs.py  profile_dcm_backend.py  profile_mdf.py
signatures/version1/: cla.json
src/synarius_attr_config/: __init__.py
src/synarius_attr_config/meta/: __init__.py  _meta.py
src/synarius_core/: __init__.py  __main__.py  simulation.py  variable_naming.py  variable_registry.py
tests/: conftest.py  test_attribute_dict.py  test_codegen_kernel.py  test_connector_routing.py  test_controller_protocol.py  test_data_model.py  test_dcm_io.py  test_diagram_geometry_width.py  test_element_type_registry.py  test_engine_unrolled_runtime.py  test_fmfl_parser.py  test_fmu_ccp.py  test_fmu_fmpy_integration.py  test_library_catalog.py  test_lookup_ops_and_misc.py  test_ndarray_format.py  test_new_kenngroesse.py  test_parameters_model.py  test_plugins.py  test_python_backend.py  test_simulation.py  test_smoke.py  test_standard_library.py  test_stimulation.py  test_syn_script_export.py  test_timeseries_io.py  test_undo_redo_mv.py  test_unrolled_step_parity.py  test_variable_naming.py  test_variable_registry.py
tests/attr_config/: test_meta.py  test_persistence.py  test_registry.py  test_view_model.py
(+172 files in other folders)
