[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synarius-core"
version = "0.1.0"
description = "GUI-loses Simulationsframework (core library)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "SQLAlchemy>=2.0.0",
]
license = { file = "LICENSE" }
authors = [{ name = "Synarius Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]

[project.urls]
Homepage = "https://github.com/synarius-project"

[project.scripts]
synarius-core-cli = "synarius_core.cli.minimal_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["synarius_core*"]

[project.optional-dependencies]
dev = []
timeseries = [
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
  "asammdf>=7.0.0",
]
docs = [
  "sphinx",
  "sphinx-needs",
  "sphinxcontrib-plantuml",
  "zerovm-sphinx-theme",
]

