[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synarius-core"
version = "0.1.0"
description = "GUI-loses Simulationsframework (core library)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "SQLAlchemy>=2.0.0",
  "duckdb>=1.5.1",
]
license = { file = "LICENSE" }
authors = [{ name = "Synarius Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]

[project.urls]
Homepage = "https://github.com/synarius-project"

[project.scripts]
synarius-core-cli = "synarius_core.cli.minimal_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["synarius_core*"]

# Bundled FmuRuntime lives next to ``registry.py`` under ``synarius_core/plugins/`` so wheels
# and PyInstaller include it (repo-root ``Plugins/`` is not part of the importable package tree).
[tool.setuptools.package-data]
"synarius_core" = [
  "plugins/FmuRuntime/pluginDescription.xml",
  "plugins/FmuRuntime/fmu_runtime.py",
  "standard_library/libraryDescription.xml",
  "standard_library/components/**/*.xml",
  "standard_library/components/**/*.fmfl",
  "standard_library/components/**/*.svg",
]

[project.optional-dependencies]
dev = []
simpy = [
  "simpy>=4.1",
]
fmu = [
  "fmpy>=0.3.0",
]
timeseries = [
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
  "asammdf>=7.0.0",
]
docs = [
  "sphinx",
  "sphinx-needs",
  "sphinxcontrib-plantuml",
  "zerovm-sphinx-theme",
]

